<resources>
    <string name="app_name">Login</string>
    <!--<string name="app_name">菜鸟社区</string>-->
    <string name="logo_name">Rookie</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="remember_password">记住密码</string>
    <string name="automatic_login">自动登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="sign">新用户注册</string>
    <string name="my">我的</string>
    <string name="username">用户名</string>
    <string name="attention">关注用户</string>
    <string name="collection">我的收藏</string>
    <string name="myArticle">我的发帖</string>
    <string name="individual">个人简介</string>
    <string name="myReply">我的评论</string>
    <string name="type">类型</string>
    <string name="date">日期</string>
    <string name="back">返回</string>
    <string name="exit">退出登录</string>
    <string name="setting">设置</string>
    <string name="safe">账号与安全</string>
    <string name="about">关于我们</string>
    <string name="search">搜索</string>
    <string name="type2">分类</string>
    <string name="post_number">发帖数</string>
    <string name="editor">编辑内容</string>
    <string name="title">请输入标题</string>
    <string name="context">请输入文章内容</string>
    <string name="cancel">取消</string>
    <string name="send">发表</string>
    <string name="verifyCode">验证码</string>
    <string name="gain">获取</string>
    <string name="next">下一步</string>
    <string name="new_password">新密码</string>
    <string name="write_individual">请输入个人简介</string>
    <string name="ensure">确定</string>
</resources>

