<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="30dp"
        >
        <EditText
            android:id="@+id/phone_number"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:hint="@string/phone_number"
            android:textColor="#969696"
            android:background="@drawable/edt_shape"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/verify_code"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:hint="@string/verifyCode"
            android:layout_below="@+id/phone_password"
            android:background="@drawable/edt_shape"
            android:layout_margin="10dp"
            android:textColor="#969696"
            />
        <EditText
            android:id="@+id/phone_password"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:hint="新密码"
            android:textColor="#969696"
            android:background="@drawable/edt_shape"
            android:layout_margin="10dp"
            android:layout_below="@+id/phone_number"
            />
        <Button
            android:id="@+id/get_verify_code"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:text="@string/gain"
            android:layout_alignRight="@+id/phone_number"
            android:layout_below="@+id/phone_password"
            android:layout_margin="15dp"
            android:background="@drawable/btn_shape"
            android:gravity="center"

            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <Button
            android:id="@+id/next"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:text="@string/next"
            android:background="@drawable/btn_shape"
            android:layout_margin="10dp"
            />
        <Button
            android:id="@+id/back"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:text="@string/back"
            android:layout_below="@+id/next"
            android:background="@drawable/btn_shape"
            android:layout_margin="10dp"
            />
    </RelativeLayout>
</LinearLayout>