<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE9E9"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/me_header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorWhite"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my"
            android:gravity="center"
            android:textSize="20sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/me_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/colorWhite"
        android:layout_marginTop="2dp"
        >

        <ImageView
            android:id="@+id/head_portrait"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/login_logo"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/me_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_toRightOf="@+id/head_portrait"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/individual"
            android:layout_below="@+id/me_username"
            android:layout_toRightOf="@id/head_portrait"
            android:textSize="15sp"
            android:layout_margin="10dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/me_message2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginTop="1dp"
        >
        <ImageView
            android:id="@+id/collect_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/box"
            android:layout_margin="5dp"
            />
        <TextView
            android:textSize="18sp"
            android:id="@+id/collect_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorWhite"
            android:gravity="center|left"
            android:layout_toRightOf="@+id/collect_icon"
            android:text="@string/collection"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginTop="1dp"
        >
        <ImageView
            android:id="@+id/attention_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/attention"
            android:layout_margin="5dp"
            />
        <TextView
            android:textSize="18sp"
            android:id="@+id/me_guanzhu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorWhite"
            android:gravity="center|left"
            android:layout_toRightOf="@+id/attention_icon"
            android:text="@string/attention"
           />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginTop="1dp"
        >
        <ImageView
            android:id="@+id/my_article_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/history"
            android:layout_margin="5dp"
            />
        <TextView
            android:textSize="18sp"
            android:id="@+id/me_fatie"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center|left"
            android:layout_toRightOf="@+id/my_article_icon"
            android:text="@string/myArticle"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginTop="1dp"
        >
        <ImageView
            android:id="@+id/my_reply_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/reply"
            android:layout_margin="5dp"
            android:alpha="0.8"
            />
        <TextView
            android:textSize="18sp"
            android:id="@+id/me_pinglun"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center|left"
            android:layout_toRightOf="@+id/my_reply_icon"
            android:text="@string/myReply"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:id="@+id/my_setting_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/setting"
            android:layout_margin="5dp"
            android:alpha="0.8"
            />
        <TextView
            android:textSize="18sp"
            android:id="@+id/my_setting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center|left"
            android:layout_toRightOf="@+id/my_setting_icon"
            android:text="@string/setting"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F0F0"
        android:layout_marginTop="5dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:background="@color/colorWhite"
            >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1">
                <Button
                    android:id="@+id/home"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/home1"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom">

                <Button
                    android:id="@+id/add"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/add_post"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"

                android:layout_weight="1">
                <Button
                    android:id="@+id/individual"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/my2"
                    />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>