<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backColor"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:textSize="15sp"
                android:id="@+id/my_setting"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:layout_marginLeft="20dp"
                android:text="@string/safe"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/next"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:alpha="0.5"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:textSize="15sp"
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:layout_marginLeft="20dp"
                android:text="@string/about"

                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/next"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:alpha="0.5"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="20dp"
            >
            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/exit"

                android:textSize="15sp"
                android:background="@color/colorWhite"
                />
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>