<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backColor"
    >

    <RelativeLayout
        android:id="@+id/person_message"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        >

        <ImageView
            android:id="@+id/my_header"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/normal_image"
            android:background="@drawable/img_shape"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="140dp"
            />

        <TextView
            android:id="@+id/me_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginLeft="160dp"
            android:layout_marginTop="120dp"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        >

        <ImageView
            android:id="@+id/person_phone_number"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:src="@drawable/phone_number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:hint="@string/phone_number"
            android:textSize="15sp" />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/post_number_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:src="@drawable/article_number" />

        <TextView
            android:id="@+id/person_post_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="80dp"
            android:hint="@string/post_number"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/person_post_number"
            android:hint="30"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        >

        <ImageView
            android:id="@+id/person_info"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:src="@drawable/individual" />

        <TextView
            android:id="@+id/person_edt_info"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:hint="@string/individual"
            android:maxLines="3"
            android:textSize="15sp" />

        <Button
            android:id="@+id/write_individual"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/next"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:alpha="0.8"
            />
    </RelativeLayout>
</LinearLayout>