<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    >

    <RelativeLayout
        android:id="@+id/item_layout"
        android:layout_width="fill_parent"
        android:layout_height="80dp" >



        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:maxLength="30"
            android:maxLines="2"
            android:textColor="#112233"
            android:layout_margin="5dp"
            android:text="标题"
            android:textSize="15sp"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:layout_below="@+id/title"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/username"
            />

        <TextView
            android:id="@+id/date"
            android:layout_toRightOf="@+id/username"
            android:layout_width="wrap_content"
            android:layout_below="@+id/title"
            android:layout_height="20dp"
            android:textSize="12sp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/date"
            />

        <TextView
            android:id="@+id/type"
            android:layout_toRightOf="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/title"
            android:textSize="12sp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/type"
            android:textColor="@color/blue"
            />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/watch"
            android:background="@drawable/watch"
            android:layout_below="@+id/title"
            />

        <TextView
            android:id="@+id/watch"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/reply_icon"
            android:gravity="center"
            android:layout_below="@+id/title"
            android:text="100"
            android:textColor="@color/blue"
            />

        <ImageView
            android:id="@id/reply_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_toLeftOf="@+id/reply"
            android:background="@drawable/reply_home"
            android:layout_below="@+id/title"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/reply"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:layout_alignRight="@+id/title"
            android:layout_below="@+id/title"
            android:gravity="center"
            android:text="100"
            android:textColor="@color/blue"
            />
    </RelativeLayout>

</LinearLayout>